--- a/Purchasing System/RequestForQuotation/templates/RequestForQuotation/requestforquotationhistory.html
+++ b/Purchasing System/RequestForQuotation/templates/RequestForQuotation/requestforquotationhistory.html
@@ -16,7 +16,7 @@
           <tbody>
               {% for r in rows %}
             <tr>
-                 <td><button type="submit" name="roq_id" value="{{r.request_for_quotation_id}}" class="btn btn-info" >{{r.request_for_quotation_id}}</button></td>
+                 <td><button type="submit" name="rfq_id" value="{{r.request_for_quotation_id}}" class="btn btn-info" >{{r.request_for_quotation_id}}</button></td>
                  <td>{{r.person_id.person_id}}</td>
                  <td>{{r.vendor_id}}</td>
                  <td>{{r.time_created}}</td>
