--- a/Purchasing System/RequestForQuotation/templates/RequestForQuotation/requestforquotationconfirmation.html
+++ b/Purchasing System/RequestForQuotation/templates/RequestForQuotation/requestforquotationconfirmation.html
@@ -18,7 +18,7 @@
             <div class="col">
                 <label class="labelpodetails">Company Information</label>
                 <textarea type="text" class="infobox" name="staff_info" readonly>{{staff_info.person_name}} &#13;&#10;{{staff_info.person_address}} &#13;&#10;{{staff_info.person_phone_number}}</textarea>
-                <input type="text" class="hideinfo" name="staff_id" value="{{staff_id}}">
+                <input type="text" class="hideinfo" name="staff_id" value="{{staff_info.person_id}}">
             </div>
             <div class="col">
                 <label class="labelpodetails">Vendor Information</label>
