--- a/Purchasing System/RequestForQuotation/templates/RequestForQuotation/requestforquotationform.html
+++ b/Purchasing System/RequestForQuotation/templates/RequestForQuotation/requestforquotationform.html
@@ -26,7 +26,7 @@
                 <textarea type="text" class="poform-control" name="purchase_requisition_id" placeholder="Purchase Requisition ID">{{purchase_requisition_id}}</textarea>
             </div>
             <div class="col">
-                <textarea type="text" class="poform-control" name="staff_id" placeholder="Staff ID">{{staff_id}}</textarea>
+                <textarea type="text" class="poform-control" name="staff_id" placeholder="Staff ID">{{staff_info.person_id}}</textarea>
             </div>
             <div class="col">
                 <input type="text" class="form-control" name="vendor_id" placeholder="Vendor ID">
